--- a/.gitignore
+++ b/.gitignore
@@ -22,17 +22,18 @@ nupkg/
 *.sln.docstates
 
 # Build results
-**/[Dd]ebug/
-**/[Dd]ebugPublic/
-**/[Rr]elease/
-**/[Rr]eleases/
-**/x64/
-**/x86/
-**/build/
-**/bld/
-**/[Bb]in/
-**/[Oo]bj/
-**/[Oo]ut/
+**/[Dd]ebug/*
+**/[Dd]ebugPublic/*
+**/[Rr]elease/*
+**/[Rr]eleases/*
+**/x64/*
+**/x86/*
+**/build/*
+**/bld/*
+**/[Bb]in/*
+**/[Oo]bj/*
+**/[Oo]ut/*
+**/bin/*
 msbuild.log
 msbuild.err
 msbuild.wrn
