--- a/dotamatchdetailsloader/package.json
+++ b/dotamatchdetailsloader/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "net": "^1.0.2",
-    "socks": "^2.4.4"
+    "socks": "^2.4.4",
+    "uuid": "^8.3.1"
   }
 }
