implement steam guard

--- a/dotamatchdetailsloader/package.json
+++ b/dotamatchdetailsloader/package.json
@@ -12,6 +12,9 @@
     "dota2": "^7.0.3",
     "dota2-with-proxy": "^7.0.24",
     "express": "^4.17.1",
+    "imap": "^0.8.19",
+    "imap-simple": "^5.0.0",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.2",
     "net": "^1.0.2",
     "socks": "^2.4.4",
