--- a/dotamatchdetailsloader/package.json
+++ b/dotamatchdetailsloader/package.json
@@ -15,8 +15,10 @@
     "imap": "^0.8.19",
     "imap-simple": "^5.0.0",
     "lodash": "^4.17.20",
+    "mailpop3": "^0.1.0",
     "mongodb": "^3.6.2",
     "net": "^1.0.2",
+    "node-pop3": "^0.6.0",
     "socks": "^2.4.4",
     "uuid": "^8.3.1"
   }
