--- a/DotaAntiSpammer/DotaAntiSpammerLauncher/DotaAntiSpammerLauncher.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerLauncher/DotaAntiSpammerLauncher.csproj
@@ -32,12 +32,17 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="PresentationCore" />
+        <Reference Include="PresentationFramework" />
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml" />
+        <Reference Include="WindowsBase" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="FileManagement.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
@@ -46,6 +51,9 @@
         <Project>{cc85a943-db01-43f7-b643-1db97d1024a3}</Project>
         <Name>DotaAntiSpammerUI</Name>
       </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
