--- a/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
@@ -432,6 +432,7 @@
     <Content Include="heroes.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="icons\snapfire.png" />
     <Resource Include="icons\spam.png" />
   </ItemGroup>
   <ItemGroup>
