--- a/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
@@ -34,7 +34,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>dota_anti_spam.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.UIAutomationClient, Version=12.0.20617.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -57,6 +61,7 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
       <Private>True</Private>
@@ -86,6 +91,7 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -144,8 +150,6 @@
     <Compile Include="Controls\Player\PlayerSmall.xaml.cs">
       <DependentUpon>PlayerSmall.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WpfOverlayDemoExample.cs" />
-    <Compile Include="WpfOverlayExampleDemo.cs" />
     <Page Include="Controls\Hero\Hero.xaml" />
     <Page Include="Controls\Hero\HeroMedium.xaml" />
     <Page Include="Controls\Hero\HeroSmall.xaml" />
@@ -433,7 +437,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icons\dota_anti_spam.png" />
-    <Resource Include="dota_anti_spam.ico" />
+    <Resource Include="dota_anti_spam.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Content Include="heroes.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
