--- a/DotaAntiSpammer/DotaAntiSpammerLauncher/DotaAntiSpammerLauncher.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerLauncher/DotaAntiSpammerLauncher.csproj
@@ -11,6 +11,9 @@
     <AssemblyName>DotaAntiSpammerLauncher</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\signature.snk</AssemblyOriginatorKeyFile>
+    <PublicSign>true</PublicSign>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -105,6 +108,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\signature.snk">
+      <Link>signature.snk</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
