--- a/DotaAntiSpammer/DotaAntiSpammerCommon/DotaAntiSpammerCommon.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerCommon/DotaAntiSpammerCommon.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>..\..\signature.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Include="..\..\signature.snk">
+        <Link>signature.snk</Link>
+      </None>
+    </ItemGroup>
 
 </Project>
