--- a/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
+++ b/DotaAntiSpammer/DotaAntiSpammerUI/DotaAntiSpammerUI.csproj
@@ -13,6 +13,9 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\signature.snk</AssemblyOriginatorKeyFile>
+    <PublicSign>true</PublicSign>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -114,7 +117,6 @@
     <Compile Include="Common\ISettings.cs" />
     <Compile Include="Common\Log.cs" />
     <Compile Include="Common\Native.cs" />
-    <Compile Include="Common\OverlayPlugin.cs" />
     <Compile Include="Common\PluginBase.cs" />
     <Compile Include="Common\PluginLoader.cs" />
     <Compile Include="Common\RelativeFile.cs" />
@@ -124,7 +126,6 @@
     <Compile Include="Common\WaitTimer.cs" />
     <Compile Include="Common\WindowConstants.cs" />
     <Compile Include="Common\WindowExtensions.cs" />
-    <Compile Include="Common\WpfOverlayPlugin.cs" />
     <Compile Include="Common\XmlSerializerEx.cs" />
     <Compile Include="Controls\Bans\Bans.xaml.cs">
       <DependentUpon>Bans.xaml</DependentUpon>
@@ -193,6 +194,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\signature.snk">
+      <Link>signature.snk</Link>
+    </None>
     <None Include="App.config" />
     <None Include="packages.config" />
     <Resource Include="small\abaddon.png">
