--- a/dotawardloader/pom.xml
+++ b/dotawardloader/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>untitled7</artifactId>
+  <artifactId>dotawardloader</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>untitled7</name>
