--- a/dotawardloader/pom.xml
+++ b/dotawardloader/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>dotawardloader</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>untitled7</name>
+  <name>dotawardloader</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
